# creature-hunter

./: .env.example  .gitignore  README.md  docker-compose.yml  setup-gcp.sh
.cursor/: ignore
backend/: .dockerignore  Dockerfile  alembic.ini  checkpoint_sqlite.py  checkpoints.sqlite  ee_embeddings.py  find_occurrences.py  load_data.py  main.py  milvus_sink.py  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_obs_tables.py  0002_embedding_ingest_checkpoint.py
backend/cli/: __init__.py  app.py
backend/cli/commands/: __init__.py
backend/cli/commands/find_occurrences/: nbn_ingest.py  run.py
backend/cli/commands/load_data/: checkpoint_db.py  checkpoint_sqlite.py  ee_embeddings.py  milvus_sink.py  run.py
backend/db/: __init__.py  models.py  schemas.py  serializers.py  session.py
